--- a/html/detail.html
+++ b/html/detail.html
@@ -15,7 +15,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css" >
+<link rel="stylesheet" href="css/style.css" >
 </head>
 
 <body>
