--- a/UserSide/WebApp/home.html
+++ b/UserSide/WebApp/home.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+</head>
+<body>
+<body>
 <div class="container" href="#/home_test">
   <div class="row">
     <div class="col-md-12" style="text-align: center;">
@@ -46,3 +59,5 @@
     </div>
   </form>
 </div>
+</body>
+</html>
