--- a/UserSide/WebApp/review.html
+++ b/UserSide/WebApp/review.html
@@ -1,41 +1,54 @@
 <div class="container" href="#/review">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <p><a href="#/search">Back</a></p>
-      <h3>Finish Report</h3>
-      <p><a href="#/succesfullSubmit">Done</a></p>
+  <!-- <div class="panel panel-default"> -->
+  <div>
+    <div class="row">
+      <div class="col-md-12" style="text-align: center;">
+        <img class="logo" src="Screens/Logo for Home Screen-2.png">
+          <h4>See Something? Say Something</h4>
+          <hr class="top">
+      </div>
     </div>
-    <div class="panel-body">
+    <!-- <div class="panel-heading">
+      <p><a href="#/search">Back</a></p>
+      <h3>Finish Report</h3> -->
+      <!-- <p><a href="#/succesfullSubmit">Done</a></p> -->
+    <!-- </div> -->
+    <div>
       <form>
         <div class="row">
           <div class="col-md-12">
             <div class="form-group"> <!-- Date field -->
-              <label class="control-label requiredField" for="">Select one</label>
+              <label class="control-label requiredField">Choose Officer's Offence</label>
                <!-- <div class="input-group-addon">$</div> -->
               <select class="form-control">
-                <option>1</option>
-                <option>1</option>
-                <option>2</option>
-                <option>1</option>
-                <option>1</option>
+                <option>Active in the community</option>
+                <option>Mentor</option>
+                <option>Harassment</option>
+                <option>Misconduct</option>
               </select>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-12">
-            <div class="form-group"> <!-- Name field -->
-              <label class="control-label" style="margin-top:2%;">Time</label>
-              <input type="time" class="form-control" placeholder="Text input">
+            <div class="form-group"> <!-- Message field -->
+              <label class="control-label " for="message"></label>
+              <textarea class="form-control review" cols="40" rows="5" placeholder="Write Brief Report Summary..."></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group" style="margin-left: 37%;"> <!-- Message field -->
+              <img style="margin-left: 4%;" src="Screens/Photo Icon.png">
+              <h4>Upload a photo or video</h4>
             </div>
           </div>
         </div>
       </form>
     </div>
-    <div class="panel-footer">
-      <button ng-click="gotToSumbit()" class="btn btn-primary">Submit</button>
+    <div class="submit_review">
+      <button ng-click="gotToSumbit()" class="btn btn-info">Submit</button>
     </div>
   </div>
-
-
-
-
 </div>
