--- a/UserSide/WebApp/index.html
+++ b/UserSide/WebApp/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Guadian</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
     <link rel="stylesheet" href="style/style.css">
     <script src="scripts/jquery.js"></script>
@@ -24,5 +25,11 @@
   </head>
   <body ng-app="app">
     <ng-view></ng-view>
+    <script>
+    	function showDiv() {
+    		document.getElementById('ImagesDiv').style.display = "block";
+    	}
+
+      </script>
   </body>
 </html>
