Deleted html directory and took index.html & detail.html files
Edited the login.html file link that connects to the index.html page

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
           <form class="login-form">
               <input type="text" placeholder="username"/>
               <input type="password" placeholder="password"/>
-            <a href="html/index.html"><p>LOGIN</p></a>
+            <a href="index.html"><p>LOGIN</p></a>
               <p class="message">Not registered? <a href="#">Create an account</a></p>
           </form>
             <img class="img-rounded" src="images/Guardian_Logo-2.png" alt="Generic placeholder image" width="100" height="100">
