Placed pages,images, & css files for the Boss Site into a folder called BossSide.

--- a/BossSite/index.html
+++ b/BossSite/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div >
-  <button id="logoutButton"type="button" class="btn btn-warning"> logout</button>
+<a href="login.html"> <button id="logoutButton"type="button" class="btn btn-warning"> logout</button></a>
 
 <div class="county">
   <h2> NORTH PRESINCT - GWINNETT COUNTY </h2>
