--- a/UserSide/WebApp/search.html
+++ b/UserSide/WebApp/search.html
@@ -66,7 +66,7 @@
     <div class="form-group"> <!-- Name field -->
       <label for="sel1">Race:</label>
       <select class="form-control" id="sel1">
-        <option>Caucasain</option>
+        <option>Caucasain than 5</option>
         <option>African-American</option>
         <option>Hispanic</option>
         <option>Asian</option>
